source/blender/editors/include/ED_mball.h
@@ -38,8 +38,12 @@ void ED_operatortypes_metaball(void);
 void ED_operatormacros_metaball(void);
 void ED_keymap_metaball(struct wmKeyConfig *keyconf);
 
-struct MetaElem *ED_mball_add_primitive(
-    struct bContext *C, struct Object *obedit, float mat[4][4], float dia, int type);
+struct MetaElem *ED_mball_add_primitive(struct bContext *C,
+                                        struct Object *obedit,
+                                        bool obedit_is_new,
+                                        float mat[4][4],
+                                        float dia,
+                                        int type);
 
 bool ED_mball_select_pick(
     struct bContext *C, const int mval[2], bool extend, bool deselect, bool toggle);
